Add context to showcase.html

--- a/website/showcase.html
+++ b/website/showcase.html
@@ -54,7 +54,9 @@
       </a>
       <a href="https://github.com/21st-centuryman/micrograd-rs" target="_blank" class="item">
         <u>Micrograd-rs</u>
-        <p> My thesis project, I wrote Micrograd Rust and discussed how Rust memory allocated the framework. </p>
+        <p> My thesis project, I wrote Micrograd by Karpathy in Rust and discussed how Rust memory allocated the framework.
+          The thesis has yet to be presented, when it has the paper will be on Github.
+        </p>
       </a>
       <a href="https://en.wikipedia.org/wiki/Heat_death_of_the_universe" target="_blank" class="item">
         <u>T- Solve Everything</u>
