Add verilog to aoc text

--- a/website/showcase.html
+++ b/website/showcase.html
@@ -49,7 +49,7 @@
       <a href="https://github.com/21st-centuryman/advent_of_code" target="_blank" class="item">
         <u>Advent of code</u>
         <p>I love programming paradigms, therefore I'm doing as many days as I can in AOC using Haskell, Rust, Python,
-          C, and Pytorch/tinygrad. In the future, I plan to do Agda and APL as well.
+          C, Verilog, and Pytorch/tinygrad. In the future, I plan to do Agda and APL as well.
         </p>
       </a>
       <a href="https://github.com/21st-centuryman/micrograd-rs" target="_blank" class="item">
